1.3.3:
  * Add check to listener to see if chat is cancelled. As Faction chat does that!
  * Added spam detector and filter
  
1.3:
  * Made and moved chat formating into a Util class
  * Added a say command
  * Fixed listener so if no answer is set it won't thorough an exception
  * Set Listener to not respond when no answer is set and send an notice to console
  * Made answer command more intuitive for inproper content in the qid as well length of the commands
  * Added alternating colors to qlist
  * Added question update command
  * Intergrated into MonsterIRC


1.2.8:
  * cleaned up chat formating method to use ChatColor methods
  * renamed plugin to AmpleChatBot in plugin.yml
  * Lick92 helped me update the plugin
  * I have fixed depreciated bukkit api references
  * I have fixed aliases typo in plugin.yml so there is aliases now listed on commands page
  
1.2.7:
  * fixed result error when no questions was entered.
  * implemented metrics statistics to help promote plugin and help learn plugin usage.
  * added none operator to answers to null out bad responses.
  
  
1.2.6:
  * reduced error stack printout.
  * quotes sql error. (Supports single quotes.)
  * added numerical wildcards: %1-%200
  * changed response system to smart comparing system
  * add the ablity to do multiple things in response with the ; delimiter
  * added pm: prefix to allow private messaging to the player
  * added chat: prefix to force player to say something in chat
  * fixed botname formating 
  
1.2:
 4/27/2012:
  * changed plugin file name do to updater plugins not detecting updated versions.
  * added the cmd: prefix to answers so you can run commands as response as console.
  * added the pcmd: prefix to answers so you can run commands as response as player.
  * added GPL3 license to plugin.
  * added the ability to set the delay in bot responses.
  * expanded database handlers to allow prepared statement with 1 string paramater.
  * fixed the /qlist bug.
  
1.1:
 4/17/2012: