@@ -1,6 +1,7 @@
 1.3.3:
   * Add check to listener to see if chat is cancelled. As Faction chat does that!
   * Added spam detector and filter
+  * Added flood detector and filter
   
 1.3:
   * Made and moved chat formating into a Util class
